<resources>
    <string name="app_name">CadastroApp</string>
    <string-array name="arrAno">
        <item>Selecione...</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="arrCategorias">
        <item>Selecione...</item>
        <item>Ação</item>
        <item>Aventura</item>
        <item>Comédia</item>
        <item>Ficção</item>
        <item>Terror</item>
        <item>Animação</item>
        <item>Drama</item>
    </string-array>

    <string name="txtAtencao">Atenção</string>
    <string name="action_settings">Configurações</string>
    <string name="nameHint">Digite o nome do filme</string>
    <string name="category">Categoria: </string>
    <string name="year">Ano: </string>
    <string name="review">Analise: </string>
    <string name="recomended">Recomendo</string>
    <string name="notrecomended">Não Recomendo</string>
    <string name="reviewHint">Digite sua analise...</string>
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
</resources>